# opencv_for_graphics_programmers

./: CMakeLists.txt  README.md  main.cpp
lesson2/: CMakeLists.txt  README.md  main.cpp
